Update profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tim Dodwell"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Applied Mathematician, Turing AI Fellow and Chair in Data Centric Engineering, University of Exeter"
   location         : "Exeter & London"
   employer         :
