--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Tim Dodwell"
   avatar           : "profile.jpg"
-  bio              : "Applied Mathematician, Turing AI Fellow and Chair in Data Centric Engineering, University of Exeter"
+  bio              : "Applied Mathematician, Alan Turing Institute & University of Exeter"
   location         : "Exeter & London"
   employer         :
   pubmed           : ""
